Finished the missing Chinese Pokémon names.

--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -115,7 +115,7 @@
 1103.lstPokemon.StringItemList=\u6930\u86cb\u6a39
 1104.lstPokemon.StringItemList=\u5361\u62c9\u5361\u62c9
 1105.lstPokemon.StringItemList=\u560e\u5566\u560e\u5566
-1106.lstPokemon.StringItemList=Hitmonlee
+1106.lstPokemon.StringItemList=\u98db\u817f\u90ce
 1107.lstPokemon.StringItemList=\u5feb\u62f3\u90ce
 1108.lstPokemon.StringItemList=\u5927\u820c\u982d
 1109.lstPokemon.StringItemList=\u74e6\u65af\u86cb
@@ -137,7 +137,7 @@
 1125.lstPokemon.StringItemList=\u96fb\u64ca\u7378
 1126.lstPokemon.StringItemList=\u9d28\u5634\u706b\u7378
 1127.lstPokemon.StringItemList=\u51f1\u7f85\u65af
-1128.lstPokemon.StringItemList=Tauros
+1128.lstPokemon.StringItemList=\u80af\u6cf0\u7f85
 1129.lstPokemon.StringItemList=\u9bc9\u9b5a\u738b
 1130.lstPokemon.StringItemList=\u66b4\u9bc9\u9f8d
 1131.lstPokemon.StringItemList=\u62c9\u666e\u62c9\u65af
@@ -153,20 +153,20 @@
 1141.lstPokemon.StringItemList=\u942e\u5200\u76d4
 1142.lstPokemon.StringItemList=\u5316\u77f3\u7ffc\u9f8d
 1143.lstPokemon.StringItemList=\u5361\u6bd4\u7378
-1144.lstPokemon.StringItemList=Articuno
-1145.lstPokemon.StringItemList=Zapdos
-1146.lstPokemon.StringItemList=Moltres
+1144.lstPokemon.StringItemList=\u6025\u51cd\u9ce5
+1145.lstPokemon.StringItemList=\u9583\u96fb\u9ce5
+1146.lstPokemon.StringItemList=\u706b\u7130\u9ce5
 1147.lstPokemon.StringItemList=\u8ff7\u4f60\u9f8d
 1148.lstPokemon.StringItemList=\u54c8\u514b\u9f8d
 1149.lstPokemon.StringItemList=\u5feb\u9f8d
-1150.lstPokemon.StringItemList=Mewtwo
-1151.lstPokemon.StringItemList=Mew
+1150.lstPokemon.StringItemList=\u8d85\u5922
+1151.lstPokemon.StringItemList=\u5922\u5e7b
 1152.lstPokemon.StringItemList=\u83ca\u8349\u8449
 1153.lstPokemon.StringItemList=\u6708\u6842\u8449
 1154.lstPokemon.StringItemList=\u5927\u7afa\u8475
 1155.lstPokemon.StringItemList=\u706b\u7403\u9f20
 1156.lstPokemon.StringItemList=\u706b\u5ca9\u9f20
-1157.lstPokemon.StringItemList=Typhlosion
+1157.lstPokemon.StringItemList=\u706b\u7206\u7378
 1158.lstPokemon.StringItemList=\u5c0f\u92f8\u9c77
 1159.lstPokemon.StringItemList=\u85cd\u9c77
 1160.lstPokemon.StringItemList=\u5927\u529b\u9c77
@@ -177,7 +177,7 @@
 1165.lstPokemon.StringItemList=\u82ad\u74e2\u87f2
 1166.lstPokemon.StringItemList=\u5b89\u74e2\u87f2
 1167.lstPokemon.StringItemList=\u5713\u7d72\u86db
-1168.lstPokemon.StringItemList=Ariados
+1168.lstPokemon.StringItemList=\u963f\u5229\u591a\u65af
 1169.lstPokemon.StringItemList=\u53c9\u5b57\u8760
 1170.lstPokemon.StringItemList=\u71c8\u7c60\u9b5a
 1171.lstPokemon.StringItemList=\u96fb\u71c8\u602a
@@ -185,17 +185,17 @@
 1173.lstPokemon.StringItemList=\u76ae\u5bf6\u5bf6
 1174.lstPokemon.StringItemList=\u5bf6\u5bf6\u4e01
 1175.lstPokemon.StringItemList=\u6ce2\u514b\u6bd4
-1176.lstPokemon.StringItemList=Togetic
+1176.lstPokemon.StringItemList=\u6ce2\u514b\u57fa\u53e4
 1177.lstPokemon.StringItemList=\u5929\u7136\u96c0
 1178.lstPokemon.StringItemList=\u5929\u7136\u9ce5
 1179.lstPokemon.StringItemList=\u54a9\u5229\u7f8a
-1180.lstPokemon.StringItemList=Flaaffy
-1181.lstPokemon.StringItemList=Ampharos
-1182.lstPokemon.StringItemList=Bellossom
+1180.lstPokemon.StringItemList=\u8338\u8338\u7f8a
+1181.lstPokemon.StringItemList=\u96fb\u9f8d
+1182.lstPokemon.StringItemList=\u7f8e\u9e97\u82b1
 1183.lstPokemon.StringItemList=\u746a\u529b\u9732
 1184.lstPokemon.StringItemList=\u746a\u529b\u9732\u9e97
 1185.lstPokemon.StringItemList=\u6a39\u624d\u602a
-1186.lstPokemon.StringItemList=Politoed
+1186.lstPokemon.StringItemList=\u868a\u9999\u86d9\u7687
 1187.lstPokemon.StringItemList=\u6bfd\u5b50\u8349
 1188.lstPokemon.StringItemList=\u6bfd\u5b50\u82b1
 1189.lstPokemon.StringItemList=\u6bfd\u5b50\u68c9
@@ -206,16 +206,16 @@
 1194.lstPokemon.StringItemList=\u70cf\u6ce2
 1195.lstPokemon.StringItemList=\u6cbc\u738b
 1196.lstPokemon.StringItemList=\u592a\u967d\u4f0a\u5e03
-1197.lstPokemon.StringItemList=Umbreon
+1197.lstPokemon.StringItemList=\u6708\u4eae\u4f0a\u5e03
 1198.lstPokemon.StringItemList=\u9ed1\u6697\u9d09
 1199.lstPokemon.StringItemList=\u5446\u5446\u738b
 1200.lstPokemon.StringItemList=\u5922\u5996
-1201.lstPokemon.StringItemList=Unown
-1202.lstPokemon.StringItemList=Wobbuffet
-1203.lstPokemon.StringItemList=Girafarig
+1201.lstPokemon.StringItemList=\u672a\u77e5\u5716\u9a30
+1202.lstPokemon.StringItemList=\u679c\u7136\u7fc1
+1203.lstPokemon.StringItemList=\u9e92\u9e9f\u5947
 1204.lstPokemon.StringItemList=\u699b\u679c\u7403
 1205.lstPokemon.StringItemList=\u4f5b\u70c8\u6258\u65af
-1206.lstPokemon.StringItemList=Dunsparce
+1206.lstPokemon.StringItemList=\u571f\u9f8d\u5f1f\u5f1f
 1207.lstPokemon.StringItemList=\u5929\u880d
 1208.lstPokemon.StringItemList=\u5927\u92fc\u86c7
 1209.lstPokemon.StringItemList=\u5e03\u9b6f
@@ -223,41 +223,41 @@
 1211.lstPokemon.StringItemList=\u5343\u91dd\u9b5a
 1212.lstPokemon.StringItemList=\u5de8\u9257\u87b3\u8782
 1213.lstPokemon.StringItemList=\u58fa\u58fa
-1214.lstPokemon.StringItemList=Heracross
+1214.lstPokemon.StringItemList=\u8d6b\u62c9\u514b\u7f85\u65af
 1215.lstPokemon.StringItemList=\u72c3\u62c9
 1216.lstPokemon.StringItemList=\u718a\u5bf6\u5bf6
 1217.lstPokemon.StringItemList=\u5708\u5708\u718a
 1218.lstPokemon.StringItemList=\u7194\u5ca9\u87f2
 1219.lstPokemon.StringItemList=\u7194\u5ca9\u8778\u725b
 1220.lstPokemon.StringItemList=\u5c0f\u5c71\u8c6c
-1221.lstPokemon.StringItemList=Piloswine
+1221.lstPokemon.StringItemList=\u9577\u6bdb\u8c6c
 1222.lstPokemon.StringItemList=\u592a\u967d\u73ca\u745a
 1223.lstPokemon.StringItemList=\u9435\u70ae\u9b5a
 1224.lstPokemon.StringItemList=\u7ae0\u9b5a\u6876
-1225.lstPokemon.StringItemList=Delibird
+1225.lstPokemon.StringItemList=\u4fe1\u4f7f\u9ce5
 1226.lstPokemon.StringItemList=\u5de8\u7fc5\u98db\u9b5a
 1227.lstPokemon.StringItemList=\u76d4\u7532\u9ce5
 1228.lstPokemon.StringItemList=\u6234\u9b6f\u6bd4
 1229.lstPokemon.StringItemList=\u9ed1\u9b6f\u52a0
-1230.lstPokemon.StringItemList=Kingdra
+1230.lstPokemon.StringItemList=\u523a\u9f8d\u738b
 1231.lstPokemon.StringItemList=\u5c0f\u5c0f\u8c61
 1232.lstPokemon.StringItemList=\u9813\u7532
-1233.lstPokemon.StringItemList=Porygon2
+1233.lstPokemon.StringItemList=\u591a\u908a\u7378\u2161
 1234.lstPokemon.StringItemList=\u9a5a\u89d2\u9e7f
-1235.lstPokemon.StringItemList=Smeargle
+1235.lstPokemon.StringItemList=\u5716\u5716\u72ac
 1236.lstPokemon.StringItemList=\u7121\u754f\u5c0f\u5b50
-1237.lstPokemon.StringItemList=Hitmontop
+1237.lstPokemon.StringItemList=\u6230\u821e\u90ce
 1238.lstPokemon.StringItemList=\u8ff7\u5507\u5a03
 1239.lstPokemon.StringItemList=\u96fb\u64ca\u602a
 1240.lstPokemon.StringItemList=\u9d28\u5634\u5bf6\u5bf6
 1241.lstPokemon.StringItemList=\u5927\u5976\u7f50
 1242.lstPokemon.StringItemList=\u5e78\u798f\u86cb
-1243.lstPokemon.StringItemList=Raikou
-1244.lstPokemon.StringItemList=Entei
-1245.lstPokemon.StringItemList=Suicune
-1246.lstPokemon.StringItemList=Larvitar
-1247.lstPokemon.StringItemList=Pupitar
+1243.lstPokemon.StringItemList=\u96f7\u516c
+1244.lstPokemon.StringItemList=\u708e\u5e1d
+1245.lstPokemon.StringItemList=\u6c34\u541b
+1246.lstPokemon.StringItemList=\u5e7c\u57fa\u62c9\u65af
+1247.lstPokemon.StringItemList=\u6c99\u57fa\u62c9\u65af
 1248.lstPokemon.StringItemList=\u73ed\u57fa\u62c9\u65af
-1249.lstPokemon.StringItemList=Lugia
-1250.lstPokemon.StringItemList=Ho-Oh
-1251.lstPokemon.StringItemList=Celebi
+1249.lstPokemon.StringItemList=\u6d1b\u5947\u4e9e
+1250.lstPokemon.StringItemList=\u9cf3\u738b
+1251.lstPokemon.StringItemList=\u6642\u62c9\u6bd4
