Added the Chinese dialog text widths.

--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -1,7 +1,7 @@
 # Strings for Dialog Library PokemonGoIV
 1.DlgMain.Title=\u5bf6\u53ef\u5922 GO IV \u8a08\u7b97\u6a5f
 2.DlgMain.txtPokemon.Label=\u5bf6\u53ef\u5922(~P)\uff1a
-3.DlgMain.txtCP.Label=\u653b\u64Ca\u529b(~C):
+3.DlgMain.txtCP.Label=~CP:
 4.DlgMain.txtHP.Label=~HP:
 5.DlgMain.txtStardust.Label=\u661f\u661f\u6c99\u5b50(~t):
 6.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
