--- a/TODO
+++ b/TODO
@@ -10,26 +10,24 @@ PokemonGoIV TODO
 146 - foreign
 150 - foreign
 151 - foreign
-157 - black - evolve
-168 - black - evolve
-176 - black - evolve
-180 - black - evolve
-181 - black - evolve
+157 - shadow - evolve
+168 - shadow - evolve
+176 - shadow - evolve
+180 - shadow - evolve
+181 - shadow - evolve
 201 - missing
 202 - missing
 203 - missing
 206 - missing
 213 - missing
 214 - missing
-221 - black - evolve
+221 - shadow - evolve
 225 - missing
 235 - missing
 243 - missing
 244 - missing
 245 - missing
-246 - missing
-247 - missing
-248 - missing
+247 - shadow - evolve
 249 - missing
 250 - missing
 251 - missing
