Added the Pokémon image icon of Typhlosion.

--- a/TODO
+++ b/TODO
@@ -2,26 +2,25 @@ PokemonGoIV TODO
 
 * Center the dialog.
 * Still missing images:
-106 - foreign - evolve
-115 - foreign
-128 - foreign
-144 - foreign
-145 - foreign
-146 - foreign
-150 - foreign
-151 - foreign
-157 - shadow - evolve
-176 - shadow - evolve
-180 - shadow - evolve
-181 - shadow - evolve
-201 - missing
-214 - missing
-221 - shadow - evolve
-225 - missing
-235 - missing
-243 - missing
-244 - missing
-245 - missing
-249 - missing
-250 - missing
-251 - missing
+106 Hitmonlee 飛腿郎 - foreign - evolve
+115 Hitmonlee 飛腿郎 - foreign
+128 Tauros 肯泰羅 - foreign
+144 Articuno 急凍鳥 - foreign
+145 Zapdos 閃電鳥 - foreign
+146 Moltres 火焰鳥 - foreign
+150 Mewtwo 超夢 - foreign
+151 Mew 夢幻 - foreign
+176 Togetic 波克基古 - shadow - evolve
+180 Flaaffy 茸茸羊 - shadow - evolve
+181 Ampharos 電龍 - shadow - evolve
+201 Unown 未知圖騰 - missing
+214 Wobbuffet 果然翁 - missing
+221 Girafarig 麒麟奇 - shadow - evolve
+225 Delibird 信使鳥 - missing
+235 Smeargle 圖圖犬 - missing
+243 Raikou 雷公 - missing
+244 Entei 炎帝 - missing
+245 Suicune 水君 - missing
+249 Lugia 洛奇亞 - missing
+250 Ho-Oh 鳳王 - missing
+251 Celebi 時拉比 - missing
