Added the Pokémon image icon of Piloswine.  Updated the TODO missing Pokémon list.

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ PokemonGoIV TODO
 * Center the dialog.
 * Still missing images:
 106 Hitmonlee 飛腿郎 - foreign - evolve
-115 Hitmonlee 飛腿郎 - foreign
+115 Kangaskhan 袋獸 - foreign
 128 Tauros 肯泰羅 - foreign
 144 Articuno 急凍鳥 - foreign
 145 Zapdos 閃電鳥 - foreign
@@ -15,7 +15,6 @@ PokemonGoIV TODO
 181 Ampharos 電龍 - shadow - evolve
 201 Unown 未知圖騰 - missing
 214 Wobbuffet 果然翁 - missing
-221 Girafarig 麒麟奇 - shadow - evolve
 225 Delibird 信使鳥 - missing
 235 Smeargle 圖圖犬 - missing
 243 Raikou 雷公 - missing
