Updated the missing Pokémon image list in TODO.

--- a/TODO
+++ b/TODO
@@ -1,23 +1,25 @@
 PokemonGoIV TODO
 
 * Center the dialog.
-* Still missing images:
-106 Hitmonlee 飛腿郎 - foreign - evolve
-115 Kangaskhan 袋獸 - foreign
-128 Tauros 肯泰羅 - foreign
-144 Articuno 急凍鳥 - foreign
-145 Zapdos 閃電鳥 - foreign
-146 Moltres 火焰鳥 - foreign
-150 Mewtwo 超夢 - foreign
-151 Mew 夢幻 - foreign
-176 Togetic 波克基古 - shadow - evolve
-201 Unown 未知圖騰 - missing
-214 Wobbuffet 果然翁 - missing
-225 Delibird 信使鳥 - missing
-235 Smeargle 圖圖犬 - missing
-243 Raikou 雷公 - missing
-244 Entei 炎帝 - missing
-245 Suicune 水君 - missing
-249 Lugia 洛奇亞 - missing
-250 Ho-Oh 鳳王 - missing
-251 Celebi 時拉比 - missing
+* Pokémons that are still missing images:
+ - 106 Hitmonlee 飛腿郎 - foreign - evolve
+ - 176 Togetic 波克基古 - shadow - evolve
+ - 201 Unown 未知圖騰 - missing
+* Pokémons that are region exclusive:
+ - 115 Kangaskhan 袋獸 - foreign - regional
+ - 128 Tauros 肯泰羅 - foreign - regional
+ - 214 Heracross 赫拉克羅斯 - missing - regional
+* Pokémons that are not released in the game yet
+ - 144 Articuno 急凍鳥 - foreign
+ - 145 Zapdos 閃電鳥 - foreign
+ - 146 Moltres 火焰鳥 - foreign
+ - 150 Mewtwo 超夢 - foreign
+ - 151 Mew 夢幻 - foreign
+ - 225 Delibird 信使鳥 - missing
+ - 235 Smeargle 圖圖犬 - missing
+ - 243 Raikou 雷公 - missing
+ - 244 Entei 炎帝 - missing
+ - 245 Suicune 水君 - missing
+ - 249 Lugia 洛奇亞 - missing
+ - 250 Ho-Oh 鳳王 - missing
+ - 251 Celebi 時拉比 - missing
