* Restructured the code and moved the report creation to an independent module.  Moved the IV sorting to the report module.  The main module is now only doing IV finding. * Changed the reported estimated CPs from values to formulas. * Moved the localized Pokémon names from the DialogStrings to AddonConfiguration, so that they can also be used in the report, too. * Changed the report logic to report the estimated maximum CPs of the last evolution forms, instead of several special rules. * Localized the report headers.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 PokemonGoIV TODO
 
+* Update the Pokémon database for the complex evolution forms
+  like Eevee, Slowpoke, etc.
 * Center the dialog.
 * Pokémons that are not released in the game yet, so their image
   icons are missing.
