--- a/README
+++ b/README
@@ -17,7 +17,7 @@ http://extensions.openoffice.org/project/pokemon-go-iv-calculator
 https://github.com/imacat/pokemongoiv
 
 
-PRESENTATION
+DEMONSTRATION
 
 * FOSDEM 2017 - The Office Pokémon GO IV Calculator
  * Summary: https://fosdem.org/2017/schedule/event/office_pokemon/
