Updated the README.

--- a/README
+++ b/README
@@ -17,15 +17,15 @@ http://extensions.openoffice.org/project/pokemon-go-iv-calculator
 https://github.com/imacat/pokemongoiv
 
 
-DEMONSTRATION
+DEMONSTRATION/PRESENTATION
 
-* FOSDEM 2017 - The Office Pokémon GO IV Calculator
- * Summary: https://fosdem.org/2017/schedule/event/office_pokemon/
- * Presentation: https://www.slideshare.net/imacat/pokemongoiv
- * Video: https://www.youtube.com/watch?v=n_88qtYbYiI
+FOSDEM 2017 - The Office Pokémon GO IV Calculator
+* Summary: https://fosdem.org/2017/schedule/event/office_pokemon/
+* Presentation: https://www.slideshare.net/imacat/pokemongoiv
+* Video: https://www.youtube.com/watch?v=n_88qtYbYiI
 
-* COSCUP 2017 (in Chinese)
- * Presentation: https://www.slideshare.net/imacat/pokemongoivzh
+COSCUP 2017 (in Chinese)
+* Presentation: https://www.slideshare.net/imacat/pokemongoivzh
 
 
 COPYRIGHT
