* Replaced the term "Player" with "Trainer" in variable names, dialog control names, and comments. * Renamed the last dialog selected Pokémon from sLastSelected to sLastPokemon, and the last selected trainer level from sLastLevel to sLastTrainerLevel, for a consistent naming scheme. * Advanced to version 0.8.4.

--- a/oxt/PokemonGoIV/DialogStrings_de_DE.properties
+++ b/oxt/PokemonGoIV/DialogStrings_de_DE.properties
@@ -4,7 +4,7 @@
 3.DlgMain.txtCP.Label=~WP:
 4.DlgMain.txtHP.Label=~KP:
 5.DlgMain.txtStardust.Label=~Sternenstaub:
-6.DlgMain.txtPlayerLevel.Label=Spieler ~Level:
+6.DlgMain.txtTrainerLevel.Label=Spieler ~Level:
 7.DlgMain.cbxIsNew.Label=Dieses Pok\u00e9mon hat noch ~kein Power-Up bekommen.
 8.DlgMain.grpAppraisals.Label=Bewertung des Teamleiters
 9.DlgMain.rdoTeamValor.Label=Team W~agemut
