--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -4,7 +4,7 @@
 3.DlgMain.txtCP.Label=~CP:
 4.DlgMain.txtHP.Label=~HP:
 5.DlgMain.txtStardust.Label=S~tardust:
-6.DlgMain.txtPlayerLevel.Label=Player ~level:
+6.DlgMain.txtTrainerLevel.Label=Player ~level:
 7.DlgMain.cbxIsNew.Label=This Pok\u00e9mon has ~not been powered-up yet.
 8.DlgMain.grpAppraisals.Label=Team Leader Appraisal
 9.DlgMain.rdoTeamValor.Label=Team ~Valor
