--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -4,7 +4,7 @@
 3.DlgMain.txtCP.Label=~CP:
 4.DlgMain.txtHP.Label=~HP:
 5.DlgMain.txtStardust.Label=\u661f\u661f\u6c99\u5b50(~t):
-6.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
+6.DlgMain.txtTrainerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
 7.DlgMain.cbxIsNew.Label=\u9019\u96bb\u5bf6\u53ef\u5922\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
 8.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
 9.DlgMain.rdoTeamValor.Label=\u6b66\u52c7\u968a(~V)
